# great-bears-seat-order

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test_simplex.py
